Fix context menu overflow

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -248,6 +248,7 @@ i.icon.centerlock{top:1.5em}
 .lines-commit .ui.avatar.image{height:18px;width:18px}
 .lines-code .bottom-line,.lines-commit .bottom-line,.lines-num .bottom-line{border-bottom:1px solid #eaecef}
 .code-view{overflow:auto;overflow-x:auto;overflow-y:hidden}
+.code-view.has-context-menu{overflow:visible;overflow-x:visible;overflow-y:visible}
 .code-view :not(.fa):not(.octicon):not(.icon){font-size:12px;font-family:'SF Mono',Consolas,Menlo,'Liberation Mono',Monaco,'Lucida Console',monospace;line-height:20px}
 .code-view table{width:100%}
 .code-view .active{background:#fff866}
